<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home_toolbar_settings">Settings</string>

    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="scan">Scan</string>
    <string name="about">about</string>

    <string name="current_version">App版本</string>
    <string name="open_source_url">项目地址</string>
    <string name="open_source_url_content">https://github.com/AndroidAndYang/AndroidStudy</string>
    <string name="about_author">关于我</string>
    <string name="about_author_content">https://blog.csdn.net/weixin_37185329</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="advice_feedback_content">向作者提供反馈意见</string>
    <string name="open_source_license">开放源代码许可</string>
    <string name="copyright">Copyright © 2018 Yang</string>
</resources>
