<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/btn_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_version"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="v 1.0.0"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        style="@style/Line"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/btn_open_source_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_source_url"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/open_source_url_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        style="@style/Line"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/btn_about_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_author"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/about_author_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        style="@style/Line"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/btn_advice_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advice_feedback"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/advice_feedback_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        style="@style/Line"
        android:background="?android:attr/listDivider" />


    <TextView
        android:id="@+id/btn_open_source_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/open_source_license"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <TextView
        style="@style/Line"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp" />

</LinearLayout>
